--- a/index.html
+++ b/index.html
@@ -2,39 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Q&A</title>
+    <title>PDF Question Answering</title>
 </head>
 <body>
-    <h1>Document Q&A</h1>
-    
+    <h1>PDF Question Answering</h1>
+
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
 
     {% if success %}
         <p style="color: green;">{{ success }}</p>
-        {% if chain %}
-            <form action="/ask" method="post">
-                <label for="question">Ask a question:</label>
-                <input type="text" id="question" name="question" required>
-                <button type="submit">Ask</button>
-            </form>
-        {% endif %}
-    {% endif %}
-
-    {% if question %}
-        <p><strong>Question:</strong> {{ question }}</p>
-    {% endif %}
-
-    {% if answer %}
-        <p><strong>Answer:</strong> {{ answer }}</p>
     {% endif %}
 
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="file">Upload a PDF document:</label>
-        <input type="file" id="file" name="file" accept=".pdf" required>
+        <label for="file">Upload PDF:</label>
+        <input type="file" name="file" accept=".pdf" required>
         <button type="submit">Upload</button>
+    </form>
+
+    {% if answer %}
+        <h2>Answer:</h2>
+        <p>{{ answer }}</p>
+    {% endif %}
+
+    <form action="/ask" method="post">
+        <label for="question">Ask a Question:</label>
+        <input type="text" name="question" required>
+        <button type="submit">Ask</button>
     </form>
 </body>
 </html>
